# rdepro_skrub_provenance

./: .gitignore  .pdm-python  Basic Provenance Dynamic.ipynb  CONTRIBUTIONS.md  EXPERIMENTS.md  README.md  benchmark_runtime_n_operators_no_provenance.csv  benchmark_runtime_n_operators_provenance_list.csv  easy_ASPJ_pipeline.ipynb  easy_ASPJ_pipeline_monkey_patched_v0.ipynb  memory_benchmark_no_provenance.csv  memory_benchmark_provenance_list.csv  monkey_patching_v0.ipynb  monkey_patching_v0.py  pipeline1_SKRUBIFIED_with_provenance_profile.out  pipeline1_SKRUBIFIED_without_provenance_profile.out  pyproject.toml  run_all_pipelines.ps1  run_all_pipelines.sh  testing_readme_claims.py
.ipynb_checkpoints/: easy_ASPJ_pipeline-checkpoint.ipynb
benchmark_logs/: SquashingScalerCase_with_provenance.out  SquashingScalerCase_without_provenance.out  benchmark_runtime_absolute_overhead_list.csv  benchmark_runtime_n_operators_no_provenance.csv  benchmark_runtime_n_operators_provenance_frozenset.csv  benchmark_runtime_n_operators_provenance_list.csv  benchmark_runtime_n_operators_provenance_list_reduce.csv  benchmark_runtime_n_operators_provenance_set_reduce.csv  benchmark_runtime_n_rows_no_provenance.csv  benchmark_runtime_n_rows_provenance_frozenset.csv  benchmark_runtime_n_rows_provenance_list.csv  benchmark_runtime_n_rows_provenance_list_reduce.csv  benchmark_runtime_n_rows_provenance_set_reduce.csv  memory_benchmark_no_provenance.csv  memory_benchmark_provenance_frozenset.csv  memory_benchmark_provenance_list.csv  memory_benchmark_provenance_list_reduce.csv  (+1 more)
mystuff/: mystuff.py  (+14 more)
(+99 files in other folders)
