[project]
name = "rdepro-skrub-provenance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeanne Gautier", email = "jeanne.wwork@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "imblearn>=0.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "skrub>=0.7.1",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
